IDEA-80866 inline Android layout refactoring

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -427,3 +427,7 @@ android.inline.style.command.name=Inline Style ''{0}''
 android.inline.style.inline.all.text=Inline &all references and remove the style
 android.inline.style.inline.this.text=Inline &this usage and keep the style
 android.extract.as.include.title=Extract Android Layout
+android.inline.layout.command.name=Inline Layout File ''{0}''
+android.inline.file.inline.all.text=Inline &all references and remove the file
+android.inline.file.inline.this.text=Inline &this usage and keep the file
+android.inline.layout.title=Inline Android Layout
