--- a/platform/platform-resources-en/src/messages/UsageView.properties
+++ b/platform/platform-resources-en/src/messages/UsageView.properties
@@ -3,7 +3,7 @@ node.non.code.usages=Non-code usages
 node.found.usages=Found usages
 usage.name=usage
 usages.title=Usages
-usages.n={0,choice, 1#1 usage|2#{0,number} usages}
+usages.n={0,choice, 0#no usages|1#1 usage|2#{0,number} usages} found{0,choice, 0# yet|1#|2#}
 action.show.import.statements=Show import statements
 action.show.read.access=Show read access
 action.show.write.access=Show write access
