--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -431,3 +431,5 @@ android.inline.layout.command.name=Inline Layout File ''{0}''
 android.inline.file.inline.all.text=Inline &all references and remove the file
 android.inline.file.inline.this.text=Inline &this usage and keep the file
 android.inline.layout.title=Inline Android Layout
+android.facet.importing.notification.group=Importing Error
+android.facet.importing.title=Error when importing module ''{0}''
