show better error message if activity is not declared in AndroidManifest.xml

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -56,7 +56,8 @@ create.global.library=Create Glob&al library ''{0}''
 create.library.dialog.title=Create Android library
 select.target.dialog.text=Please select Android Target
 default.activity.not.found.error=Default Activity not found
-activity.not.launchable.error=The Intent Filter of the Activity must contain {0} action
+activity.not.launchable.error=The intent-filter of the activity must contain {0} action
+activity.not.declared.in.manifest=The activity ''{0}'' is not declared in AndroidManifest.xml
 new.typed.resource.command.name=New {0} resource file
 new.typed.resource.dialog.title=New {0} Resource File
 new.file.dialog.text=Enter a new file name
