--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1040,8 +1040,8 @@ instantiating.object.to.get.class.object.problem.descriptor=Instantiating object
 field.may.be.static.problem.descriptor=Field <code>#ref</code> may be 'static' #loc
 method.may.be.static.problem.descriptor=Method <code>#ref()</code> may be 'static' #loc
 class.initializer.may.be.static.problem.descriptor=Class initializer may be 'static' #loc
-map.replaceable.by.enum.map.problem.descriptor=<code>#ref</code> replaceable with EnumMap #loc
-set.replaceable.by.enum.set.problem.descriptor=<code>#ref</code> replaceable with EnumSet #loc
+map.replaceable.by.enum.map.problem.descriptor=<code>#ref</code> replaceable with 'EnumMap' #loc
+set.replaceable.by.enum.set.problem.descriptor=<code>#ref</code> replaceable with 'EnumSet' #loc
 inner.class.may.be.static.problem.descriptor=Inner class <code>#ref</code> may be 'static' #loc
 string.buffer.must.have.initial.capacity.problem.descriptor=<code>#ref</code> without initial capacity #loc
 string.buffer.replaceable.by.string.builder.problem.descriptor=<code>StringBuffer #ref</code> may be declared as 'StringBuilder' #loc
