IDEA-88881 rename "Next Template Variable" action

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -53,7 +53,7 @@ group.EditorActions.text=Editor Actions
 action.EditorChooseLookupItem.text=Choose Lookup Item
 action.EditorChooseLookupItemReplace.text=Choose Lookup Item Replace
 action.EditorChooseLookupItemCompleteStatement.text=Choose Lookup Item and Invoke Complete Statement
-action.NextTemplateVariable.text=Next Template Variable
+action.NextTemplateVariable.text=Next Template Variable or Finish In-Place Refactoring
 action.PreviousTemplateVariable.text=Previous Template Variable
 action.NextParameter.text=Next Parameter
 action.PrevParameter.text=Prev Parameter
