--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -317,7 +317,7 @@ action.FindUsages.text=Find _Usages...
 action.FindUsages.description=Find usages of the symbol at caret
 action.ShowUsages.text=_Show Usages
 action.ShowUsages.description=Show usages of the symbol at caret
-action.ShowSettingsAndFindUsages.text=Find Usages _Settings
+action.ShowSettingsAndFindUsages.text=Find Usages Settings
 action.ShowSettingsAndFindUsages.description=Choose scope and edit options for the Find Usages action
 action.FindUsagesInFile.text=F_ind Usages in File
 action.FindUsagesInFile.description=Find usages of the symbol at caret in active editor
