IDEA-19061 Integrate the Rearranger-plugin into core-IDE
Add ability to add new arrangement rules

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -555,3 +555,5 @@ arrangement.title.editor=Edit rule
 arrangement.text.type=Type
 arrangement.text.modifier=Modifier
 arrangement.text.negate=Negate
+arrangement.action.condition.add.text=Add condition
+arrangement.action.condition.add.description=Add new arrangement rule condition
