--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -262,3 +262,4 @@ tabs.alphabetical=false
 # temporary: until tested
 git.warn.about.crlf=false
 appcode.in_process_lldb=false
+remote.changelist.management.available=false
