--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -557,3 +557,5 @@ arrangement.text.modifier=Modifier
 arrangement.text.negate=Negate
 arrangement.action.rule.add.text=Add rule
 arrangement.action.rule.add.description=Add new arrangement rule
+arrangement.action.rule.remove.text=Remove rule
+arrangement.action.rule.remove.description=Remove selected arrangement rule
