--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -732,7 +732,7 @@ implicit.numeric.conversion.display.name=Implicit numeric conversion
 unnecessary.interface.modifier.display.name=Unnecessary interface modifier
 confusing.main.method.display.name=Confusing 'main()' method
 octal.literal.display.name=Octal integer
-misordered.assert.equals.parameters.display.name=Misordered 'assertEquals()' parameters
+misordered.assert.equals.parameters.display.name=Misordered 'assertEquals()' arguments
 unnecessary.constructor.display.name=Redundant no-arg constructor
 method.name.same.as.parent.name.display.name=Method name same as parent class name
 java.lang.reflect.display.name=Use of 'java.lang.reflect'
@@ -1068,7 +1068,7 @@ asserts.without.messages.problem.descriptor=JUnit <code>#ref()</code> without me
 test.case.with.constructor.problem.descriptor=Initialization logic in constructor <code>#ref()</code> instead of 'setUp()' #loc
 test.case.with.constructor.problem.descriptor.initializer=Initialization logic in initializer instead of 'setUp()'
 misspelled.set.up.problem.descriptor=<code>#ref()</code> probably be 'setUp()' #loc
-misordered.assert.equals.parameters.problem.descriptor=Parameters to <code>#ref()</code> in wrong order #loc
+misordered.assert.equals.parameters.problem.descriptor=Arguments to <code>#ref()</code> in wrong order #loc
 misspelled.tear.down.problem.descriptor=<code>#ref()</code> method should probably be 'tearDown()' #loc
 static.suite.problem.descriptor=JUnit <code>#ref()</code> methods not declared 'static' #loc
 setup.calls.super.setup.problem.descriptor=<code>#ref()</code> does not call 'super.setUp()' #loc
@@ -1194,7 +1194,7 @@ if.statement.with.identical.branches.collapse.quickfix=Collapse 'if' statement
 foreach.replace.quickfix=Replace with 'for each'
 unnecessary.boxing.remove.quickfix=Remove boxing
 unnecessary.unboxing.remove.quickfix=Remove unboxing
-misordered.assert.equals.parameters.flip.quickfix=Flip compared parameters
+misordered.assert.equals.parameters.flip.quickfix=Flip compared arguments
 setup.calls.super.setup.add.quickfix=Add call to 'super.setUp()'
 simplify.junit.assertion.simplify.quickfix=Simplify assertion
 teardown.calls.super.teardown.add.quickfix=Add call to 'super.tearDown()'
