--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -559,3 +559,4 @@ arrangement.action.rule.add.text=Add rule
 arrangement.action.rule.add.description=Add new arrangement rule
 arrangement.action.rule.remove.text=Remove rule
 arrangement.action.rule.remove.description=Remove selected arrangement rule
+checkbox.spaces.around.lambda.arrow=Lambda arrow
