a bit more consistency on the welcome screen (PY-6515)

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1138,9 +1138,9 @@ action.CommittedChanges.Revert.description=Apply the reverse of the selected cha
 action.OpenDirectoryProject.text=Open Directory...
 action.OpenDirectoryProject.description=Start editing code in the specified directory
 action.WelcomeScreen.OpenDirectoryProject.text=Open Directory
-action.WelcomeScreen.OpenDirectoryProject.description=Start editing code in the specified directory
+action.WelcomeScreen.OpenDirectoryProject.description=Start editing code in the specified directory.
 action.WelcomeScreen.CreateDirectoryProject.text=Create New Project
-action.WelcomeScreen.CreateDirectoryProject.description=Create a new project
+action.WelcomeScreen.CreateDirectoryProject.description=Create a new project.
 action.NewDirectoryProject.text=New Project...
 action.NewDirectoryProject.description=Create a new project
 
