--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -335,7 +335,7 @@ checkbox.caret.blinking.ms=Caret blinking (ms):
 checkbox.mark.modified.tabs.with.asterisk=Mark modified tabs with asterisk
 group.code.folding=Code Folding
 checkbox.collapse.xml.tags=XML tags
-checkbox.collapse.xml.attributes=XML 'style' attribute
+checkbox.collapse.html.style.attribute=HTML 'style' attribute
 checkbox.collapse.anonymous.classes=<html>Anonymous classes</html>
 checkbox.collapse.closures=<html>"Closures" (anonymous classes implementing one method)</html>
 checkbox.collapse.generic.constructor.parameters=<html>Generic constructor and method parameters</html>
