--- a/platform/platform-resources-en/src/messages/ToolsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ToolsBundle.properties
@@ -58,3 +58,4 @@ tools.before.run.provider.name=Run External tool
 tools.after.commit.description=Run tool:
 tools.unnamed.group=[unnamed group]
 tools.list.item.none=(none)
+tools.dialog.title=External tools
