IDEA-90579 Tabs: Alphabetical sorting must be OFF by default

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1092,3 +1092,4 @@ diff.dialog.title=Diff Between ''{0}'' and ''{1}''
 goto.custom.region.command=Go to Custom Region
 goto.custom.region.message.dumb.mode=Go to Custom Region action is not available until indices are built.
 goto.custom.region.message.unavailable=There are no custom folding regions in the current file.
+alphabetical.mode.is.on.warning=Alphabetical order for tabs is ON. Switch it OFF?
