typos in family names (IDEA-90711)

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -162,8 +162,8 @@ add.array.creation.expression.intention.family.name=Add Array Creation Expressio
 replace.diamond.with.explicit.type.arguments.intention.name=Replace '<>' with explicit type arguments
 replace.diamond.with.explicit.type.arguments.intention.family.name=Replace Diamond with Explicit Type Arguments
 replace.lambda.with.anonymous.intention.name=Replace lambda with anonymous class
-replace.lambda.with.anonymous.intention.name.family.name=Replace lambda with anonymous class
-infer.lambda.parameter.type.intention.name.family.name=Infer lambda parameter type
+replace.lambda.with.anonymous.intention.family.name=Replace lambda with anonymous class
+infer.lambda.parameter.type.intention.family.name=Infer lambda parameter type
 make.public.intention.name=Make 'public'
 make.public.intention.family.name=Make Public
 make.package.private.intention.name=Make package-local
