Replace "remove 'extends TestCase' from class" quickfix with "Convert JUnit 3 class to JUnit 4" quickfix and associated cleanup and i18n

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1728,9 +1728,11 @@ redundant.string.format.call.display.name=Redundant call to 'String.format()'
 redundant.string.format.call.problem.descriptor=Redundant call to <code>#ref</code> #loc
 redundant.string.format.call.quickfix=Remove redundant call to 'String.format()'
 junit4.test.method.in.class.extending.junit3.testcase.display.name=JUnit 4 test method in class extending JUnit 3 TestCase
-junit4.test.method.in.class.extending.junit3.testcase.problem.descriptor=@Test annotated method <code>#ref</code> inside class extending JUnit 3 TestCase #loc
-ignore.test.method.in.class.extending.junit3.testcase.problem.descriptor=@Ignore annotated method <code>#ref</code> won't be ignored #loc
-ignore.test.method.in.class.extending.junit3.testcase.problem.fix=Remove @Ignore and rename method to ''{0}''
+junit4.test.method.in.class.extending.junit3.testcase.problem.descriptor=Method <code>#ref()</code> annotated with '@Test' inside class extending JUnit 3 TestCase #loc
+ignore.test.method.in.class.extending.junit3.testcase.problem.descriptor=JUnit 3 test method <code>#ref()</code> annotated with '@Ignore' won't be ignored #loc
+ignore.test.method.in.class.extending.junit3.testcase.quickfix=Remove ''@Ignore'' and rename method to ''{0}''
+convert.junit3.test.class.quickfix=Convert JUnit 3 class ''{0}'' to JUnit 4
+remove.junit4.test.annotation.quickfix=Remove '@Test' annotation
 equals.called.on.enum.constant.display.name='equals()' called on Enum value
 equals.called.on.enum.constant.problem.descriptor=<code>#ref</code> called on Enum value #loc
 equals.called.on.enum.constant.quickfix=Replace 'equals()' with '=='
