IDEA-21980 (Inspection: test method without @Test annotation)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1441,6 +1441,7 @@ suspicious.system.arraycopy.problem.descriptor5=<code>#ref</code> is not of an a
 suspicious.system.arraycopy.problem.descriptor6=Source parameter type ''{0}'' is not assignable to destination parameter <code>#ref</code> of type ''{1}'' #loc
 raw.use.of.parameterized.type.ignore.new.objects.option=Ignore construction of new objects
 raw.use.of.parameterized.type.ignore.type.casts.option=Ignore type casts
+raw.use.of.parameterized.type.ignore.uncompilable.option=Ignore where a type parameter would not compile
 method.only.used.from.inner.class.display.name=Private method only used from inner class
 method.only.used.from.inner.class.problem.descriptor.anonymous.extending=Method <code>#ref()</code>#loc is only used from an anonymous class extending ''{0}'' #loc
 method.only.used.from.inner.class.problem.descriptor.anonymous.implementing=Method <code>#ref()</code>#loc is only used from an anonymous class implementing ''{0}'' #loc
@@ -1983,3 +1984,5 @@ public.constructor.display.name='public' constructor
 public.default.constructor.problem.descriptor=Class <code>#ref</code> has public default constructor
 public.constructor.problem.descriptor=Public constructor <code>#ref()</code>
 public.constructor.quickfix=Replace constructor with factory method
+junit3.style.test.method.in.junit4.class.display.name=Old style JUnit test method in JUnit 4 class
+junit3.style.test.method.in.junit4.class.problem.descriptor=Old style JUnit test method <code>#ref</code> in JUnit 4 class
