--- a/plugins/InspectionGadgets/src/META-INF/plugin.xml
+++ b/plugins/InspectionGadgets/src/META-INF/plugin.xml
@@ -1331,6 +1331,10 @@
     <localInspection language="JAVA" shortName="IgnoredJUnitTest" bundle="com.siyeh.InspectionGadgetsBundle" key="ignored.junit.test.display.name"
                      groupBundle="messages.InspectionsBundle" groupKey="group.names.junit.issues" enabledByDefault="false" level="WARNING"
                      implementationClass="com.siyeh.ig.junit.IgnoredJUnitTestInspection"/>
+    <localInspection language="JAVA" shortName="JUnit3StyleTestMethodInJUnit4Class" bundle="com.siyeh.InspectionGadgetsBundle"
+                     key="junit3.style.test.method.in.junit4.class.display.name" groupBundle="messages.InspectionsBundle"
+                     groupKey="group.names.junit.issues" enabledByDefault="false" level="WARNING"
+                     implementationClass="com.siyeh.ig.junit.JUnit3StyleTestMethodInJUnit4ClassInspection"/>
     <localInspection language="JAVA" shortName="JUnit4AnnotatedMethodInJUnit3TestCase" bundle="com.siyeh.InspectionGadgetsBundle"
                      key="junit4.test.method.in.class.extending.junit3.testcase.display.name" groupBundle="messages.InspectionsBundle"
                      groupKey="group.names.junit.issues" enabledByDefault="true" level="WARNING"
