--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -86,6 +86,7 @@ title.inline.elements=Inline Elements
 title.keep.whitespaces.inside=Keep Whitespaces Inside
 title.dont.wrap.if.inline.content=Dont Wrap If Inline Content Only
 checkbox.wrap.text=Wrap text
+checkbox.parentheses.around.method.arguments=Add parentheses around method arguments
 checkbox.rename.local.variables.inplace=Enable in-place mode
 editbox.keep.blank.lines=Keep blank lines:
 checkbox.keep.white.spaces=Keep white spaces
