improve AndroidInlineLayoutHandler: it should work from any place of <include> tag; do not show separate "Inline Layout" action in xml editor (show it in designer only)

--- a/plugins/android/src/META-INF/plugin.xml
+++ b/plugins/android/src/META-INF/plugin.xml
@@ -95,9 +95,7 @@
       <add-to-group group-id="RefactoringMenu"/>
     </action>
     <action id="AndroidInlineIncludeAction" class="org.jetbrains.android.refactoring.AndroidInlineIncludeAction"
-            text="Inline _Layout..." description="Inlines included Android layout">
-      <add-to-group group-id="RefactoringMenu"/>
-    </action>
+            text="Inline _Layout..." description="Inlines included Android layout"/>
   </actions>
 
   <depends>JUnit</depends>
