--- a/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
+++ b/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
@@ -39,6 +39,7 @@ xbreakpoint.label.after.breakpoint.was.hit=After breakpoint was hit:
 xbreakpoint.radio.disable.again=Disable again
 xbreakpoint.radio.leave.enabled=Leave enabled
 xbreakpoint.master.breakpoint.none=<None>
+xbreakpoint.master.breakpoint.description=Disabled until selected breakpoint is hit:
 rule.name.group.by.file=Group by file
 xbreakpoint.default.display.text=Line {0} in {1}
 
