inspection/intention to collapse/expand lambda body (IDEA-90827)

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -220,6 +220,11 @@
     </intentionAction>
 
     <intentionAction>
+      <className>com.siyeh.ipp.types.ExpandOneLineLambda2CodeBlockIntention</className>
+      <categoryKey>intention.category.declaration</categoryKey>
+    </intentionAction>
+
+    <intentionAction>
       <className>com.siyeh.ipp.decls.ChangeVariableTypeToRhsTypeIntention</className>
       <categoryKey>intention.category.declaration</categoryKey>
     </intentionAction>
