IDEA-90876 File menu Close Project Mnemonic "J" moved to Project Settings that already has keyboard shortcut

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -236,7 +236,7 @@ action.CloseProject.text=Close Pro_ject
 action.CloseProject.description=Close current project
 action.ShowSettings.text=Se_ttings...
 action.ShowSettings.description=Configure application settings
-action.ShowProjectStructureSettings.text=Pro_ject Structure...
+action.ShowProjectStructureSettings.text=Project Structure...
 action.ShowProjectStructureSettings.description=Configure project structure
 action.TemplateProjectProperties.text=Templ_ate Settings...
 action.TemplateProjectProperties.description=Configure template settings for all new projects
