--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -164,7 +164,7 @@ compiler.process.vm.options.description=Additional options for the build process
 
 compiler.process.use.memory.temp.cache=true
 # suppress inspection "UnusedProperty"
-compiler.process.use.memory.temp.cache.description=Store temporary data in memory for faster compilation; requires larger heap size for the build process.
+compiler.process.use.memory.temp.cache.description=Store temporary data in memory for faster compilation; requires larger heap size for the build process. If parallel build is enabled, the option is ignored and temp data is always stored in memory.
 
 compiler.process.use.external.javac=false
 # suppress inspection "UnusedProperty"
