fix missing icon on windows

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
@@ -6,7 +6,7 @@ ComboBox.foreground=cccccc
 
 Tree.line=909090
 Tree.hash=909090
-Tree.collapsedIcon=AllIcons.Darcula.TreeCollapsedIcon
-Tree.expandedIcon=AllIcons.Darcula.TreeExpandedIcon
+Tree.collapsedIcon=AllIcons.Darcula.TreeNodeCollapsed
+Tree.expandedIcon=AllIcons.Darcula.TreeNodeExpanded
 
 Menu.selectionBackground=526CA4
