don't silently choose existing import statement when importing from project (PY-7426)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -263,3 +263,5 @@ tabs.alphabetical=false
 git.warn.about.crlf=false
 appcode.in_process_lldb=false
 remote.changelist.management.available=false
+
+python.import.always.ask=false
