IDEA-90968 Ambiguous mnemonic in the "Navigate" menu

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -338,7 +338,7 @@ action.ViewToolButtons.text=_Tool Buttons
 action.ViewToolButtons.description=Show/hide tool window buttons
 action.ViewNavigationBar.text=Na_vigation Bar
 action.ViewNavigationBar.description=Show/hide the navigation bar
-action.FileStructurePopup.text=_File Structure
+action.FileStructurePopup.text=F_ile Structure
 action.FileStructurePopup.description=Popup structure of the current file for quick navigation
 action.ShowFilePath.text=File _Path
 action.ShowFilePath.description=Popup path of the current file for opening in external file manager
