expand lambda body intention: register family name (IDEA-91005)

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -164,6 +164,7 @@ replace.diamond.with.explicit.type.arguments.intention.family.name=Replace Diamo
 replace.lambda.with.anonymous.intention.name=Replace lambda with anonymous class
 replace.lambda.with.anonymous.intention.family.name=Replace lambda with anonymous class
 infer.lambda.parameter.type.intention.family.name=Infer lambda parameter type
+expand.one.line.lambda2.code.block.intention.family.name=Expand lambda expression body to code block
 make.public.intention.name=Make 'public'
 make.public.intention.family.name=Make Public
 make.package.private.intention.name=Make package-local
