--- a/platform/platform-resources-en/src/messages/XmlBundle.properties
+++ b/platform/platform-resources-en/src/messages/XmlBundle.properties
@@ -57,7 +57,7 @@ html.inspections.form.input.without.label=Form input without an associated label
 html.inspections.create.label.from.text.before.action=Create a new label from the text before {0} element
 html.inspections.create.label.from.text.after.action=Create a new label from the text after {0} element
 html.inspections.create.new.label=Associate a new label with {0} element
-html.inspections.unknown.target=Unresolved href target
+html.inspections.unknown.target=File reference problems
 
 html.annotators.non.existent.internet.resource=Cannot find resource "{0}"
 
